# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: user.pb.cc  user.pb.h  user.proto
example/client/: CMakeLists.txt  main.cpp
example/server/: CMakeLists.txt  main.cpp
include/: loger.h  rpcchannel.h  rpcconfig.h  rpccontroller.h  rpcheader.pb.h  rpcprovider.h  zkclient.h
output/: client  client.conf  server  server.conf
src/: CMakeLists.txt  rpcchannel.cc  rpcconfig.cc  rpccontroller.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  zkclient.cc
